Estrutura HTML concluida

--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
     <title>CJ E-Commerce</title>
 </head>
 <body>
-    
+    <header>
+        <img src="/images/CJ CLOTHING.jpg" alt="logo">
+        <h1>C.J Clothing</h1>
+    </header>
+    <section>
+        <main>
+            <img src="/images/1.webp" alt="homem com camiseta preta">
+            <h2>Camiseta Básica Preta</h2>
+            <p>R$15,00</p>
+            <p>30% OFF</p>
+            <h3>Camiseta básica masculina, de modelo comfort, confeccionada em algodão peruano, com mangas curtas e gola redonda.</h3>
+        </main>
+    </section>
+    <section>
+        <main>
+            <p>Tamanho</p>
+            <ul>
+                <li>P</li>
+                <li>M</li>
+                <li>G</li>
+                <li>XG</li>
+                <li>XXG</li>
+            </ul>
+            <p>Cor</p>
+            <ul>
+                <li>red</li>
+                <li>green</li>
+                <li>blue</li>
+                <li>lightpink</li>
+            </ul>
+            <p>Quantidade</p>
+            <input type="text" value="1">
+        </main>
+        <button>
+            Compre Agora
+        </button>
+    </section>
+
 </body>
 </html>
