Estilização CSS iniciada

--- a/index.html
+++ b/index.html
@@ -3,45 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CJ E-Commerce</title>
 </head>
 <body>
-    <header>
-        <img src="/images/CJ CLOTHING.jpg" alt="logo">
-        <h1>C.J Clothing</h1>
+    <header>  
+        <img class="logo" src="/images/CJ CLOTHING.jpg" alt="logo">      
+        <h1 class="e-name">C.J Clothing</h1>
     </header>
     <section>
-        <main>
-            <img src="/images/1.webp" alt="homem com camiseta preta">
-            <h2>Camiseta Básica Preta</h2>
-            <p>R$15,00</p>
-            <p>30% OFF</p>
-            <h3>Camiseta básica masculina, de modelo comfort, confeccionada em algodão peruano, com mangas curtas e gola redonda.</h3>
+        <main class="img1">
+            <img class="pic1" src="/images/1.webp" alt="homem com camiseta preta">
+            <main class="content">
+                <h2 class="titulo">Camiseta Básica Preta</h2>
+                <p class="preco"><b>R$15,00</p>
+                <p class="desc">30% OFF</p></b>
+                <p class="review">Camiseta básica masculina, de modelo comfort, confeccionada em algodão peruano, com mangas curtas e gola redonda.</p>
+                <main class="content2">
+                    <p class="size">Tamanho</p>
+                    <ul class="l1">
+                        <a class="t1" href="#"><li>P</li></a>
+                        <a class="t1" href="#"><li>M</li></a>
+                        <a class="t1" href="#"><li>G</li></a>
+                        <a class="t1" href="#"><li>XG</li></a>
+                        <a class="t1" href="#"><li>XXG</li></a>
+                    </ul>
+                </main>
+                <div class="content3">
+                    <p class="color">Cor</p>
+                    <ul class="l2">
+                        <li class="l2 black"></li>
+                        <li class="l2 red"></li>
+                        <li class="l2 blue"></li>
+                        <li class="l2 lightpink"></li>
+                    </ul>
+                </div>
+                <p class="qtd">Quantidade</p>
+                <input type="text" value="1">
+                <button>
+                    Compre Agora
+                </button>
+            </main>    
         </main>
-    </section>
-    <section>
-        <main>
-            <p>Tamanho</p>
-            <ul>
-                <li>P</li>
-                <li>M</li>
-                <li>G</li>
-                <li>XG</li>
-                <li>XXG</li>
-            </ul>
-            <p>Cor</p>
-            <ul>
-                <li>red</li>
-                <li>green</li>
-                <li>blue</li>
-                <li>lightpink</li>
-            </ul>
-            <p>Quantidade</p>
-            <input type="text" value="1">
-        </main>
-        <button>
-            Compre Agora
-        </button>
     </section>
 
 </body>
