Conclusão inicial do Site

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
         <h1 class="e-name">C.J Clothing</h1>
     </header>
     <section>
-        <main class="img1">
+        <div class="img1">
             <img class="pic1" src="/images/1.webp" alt="homem com camiseta preta">
-            <main class="content">
-                <h2 class="titulo">Camiseta Básica Preta</h2>
-                <p class="preco"><b>R$15,00</p>
-                <p class="desc">30% OFF</p></b>
-                <p class="review">Camiseta básica masculina, de modelo comfort, confeccionada em algodão peruano, com mangas curtas e gola redonda.</p>
-                <main class="content2">
-                    <p class="size">Tamanho</p>
+            <div class="container">
+                <main class="roupa">
+                    <h2 class="titulo">Camiseta Básica Preta</h2>
+                    <h3 class="preco">R$15,00</h3>
+                    <h3 class="desc">30% OFF</h3>
+                    <p class="review">Camiseta básica masculina, de modelo comfort, confeccionada em algodão peruano, com mangas curtas e gola redonda.</p>
+                </main>    
+                <main class="tam">
+                    <h3 class="size">Tamanho</h3>
                     <ul class="l1">
                         <a class="t1" href="#"><li>P</li></a>
                         <a class="t1" href="#"><li>M</li></a>
@@ -29,23 +31,24 @@
                         <a class="t1" href="#"><li>XXG</li></a>
                     </ul>
                 </main>
-                <div class="content3">
-                    <p class="color">Cor</p>
-                    <ul class="l2">
+                <main class="color">
+                    <h3 class="cor">Cor</h3>
+                    <ul class="lista2">
                         <li class="l2 black"></li>
                         <li class="l2 red"></li>
                         <li class="l2 blue"></li>
                         <li class="l2 lightpink"></li>
                     </ul>
-                </div>
-                <p class="qtd">Quantidade</p>
-                <input type="text" value="1">
+                </main>    
+                <main class="qtd">
+                    <h3 class="quanti">Quantidade</h3>
+                    <input type="text" value="1">
+                </main>
                 <button>
                     Compre Agora
                 </button>
-            </main>    
-        </main>
+            </div>
+        </div>     
     </section>
-
 </body>
 </html>
