--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <section>
         <div class="img1">
             <img class="pic1" src="/images/1.webp" alt="homem com camiseta preta">
+            <input type="checkbox" id="img1">
+            <img class="pic2" src="/images/2.webp" alt="homem com camiseta preta">
+            <input type="checkbox" id="img2">
+            <img class="pic3" src="/images/3.webp" alt="homem com camiseta preta">
+            
             <div class="container">
                 <main class="roupa">
                     <h2 class="titulo">Camiseta Básica Preta</h2>
