--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <section>
         <div class="img1">
             <img class="pic1" src="/images/1.webp" alt="homem com camiseta preta">
-            <input type="checkbox" id="img1">
+            <input type="radio" id="img1" class="rad1" name="check1" checked="checked">
+            <label for="img1" class="lb1 label"></label>
             <img class="pic2" src="/images/2.webp" alt="homem com camiseta preta">
-            <input type="checkbox" id="img2">
+            <input type="radio" id="img2" class="rad2" name="check1">
+            <label for="img2" class="lb2 label"></label>
             <img class="pic3" src="/images/3.webp" alt="homem com camiseta preta">
-            
             <div class="container">
                 <main class="roupa">
                     <h2 class="titulo">Camiseta Básica Preta</h2>
@@ -54,6 +55,8 @@
                 </button>
             </div>
         </div>     
+        <label class="lb1" for="#img1"></label>
+        <label class="lb2" for="#img2"></label>
     </section>
 </body>
 </html>
