Adicionando paginas iniciais do site

--- a/index.html
+++ b/index.html
@@ -1,60 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CJ E-Commerce</title>
-</head>
-<body>
-    <header>  
-        <img class="logo" src="/images/CJ CLOTHING.jpg" alt="logo">      
-        <h1 class="e-name">C.J Clothing</h1>
+  </head>
+  <body>
+    <header>
+      <div class="e-name">
+        <img class="logo" src="/images/CJ CLOTHING.jpg" alt="logo" />
+        <h1>C.J Clothing</h1>
+      </div>
+      <div class="login">
+        <!-- icone de login -->
+        <p>LOGIN</p>
+        <!-- icone de register -->
+        <p>REGISTRE-SE</p>
+      </div>
     </header>
-    <section>
-        <div class="img1">
-            <img class="pic1" src="/images/1.webp" alt="homem com camiseta preta">
-            <input type="radio" id="img1" class="rad1" name="check1" checked="checked">
-            <label for="img1" class="lb1 label"></label>
-            <img class="pic2" src="/images/2.webp" alt="homem com camiseta preta">
-            <input type="radio" id="img2" class="rad2" name="check1">
-            <label for="img2" class="lb2 label"></label>
-            <img class="pic3" src="/images/3.webp" alt="homem com camiseta preta">
-            <div class="container">
-                <main class="roupa">
-                    <h2 class="titulo">Camiseta Básica Preta</h2>
-                    <h3 class="preco">R$15,00</h3>
-                    <h3 class="desc">30% OFF</h3>
-                    <p class="review">Camiseta básica masculina, de modelo comfort, confeccionada em algodão peruano, com mangas curtas e gola redonda.</p>
-                </main>    
-                <main class="tam">
-                    <h3 class="size">Tamanho</h3>
-                    <ul class="l1">
-                        <a class="t1" href="#"><li>P</li></a>
-                        <a class="t1" href="#"><li>M</li></a>
-                        <a class="t1" href="#"><li>G</li></a>
-                        <a class="t1" href="#"><li>XG</li></a>
-                        <a class="t1" href="#"><li>XXG</li></a>
-                    </ul>
-                </main>
-                <main class="color">
-                    <h3 class="cor">Cor</h3>
-                    <ul class="lista2">
-                        <li class="l2 black"></li>
-                        <li class="l2 red"></li>
-                        <li class="l2 blue"></li>
-                        <li class="l2 lightpink"></li>
-                    </ul>
-                </main>    
-                <main class="qtd">
-                    <h3 class="quanti">Quantidade</h3>
-                    <input type="text" value="1">
-                </main>
-                <button>
-                    Compre Agora
-                </button>
-            </div>
-        </div>     
-    </section>
-</body>
+    <main>
+      <h2>Vista o seu dia a dia com estilo.</h2>
+      <p>
+        Estilo casual para o homem moderno! <br/>
+        Conforto e atitude em cada peça.
+      </p>
+      <!-- 2 FOTOS DE AMOSTRA -->
+    </main>
+    <nav class="menu">
+      <ul class="list">
+        <li class="list-item">INÍCIO</li>
+        <li class="list-item">CAMISETAS</li>
+        <li class="list-item">CALÇAS</li>
+        <li class="list-item">BERMUDAS</li>
+        <li class="list-item">CALÇADOS</li>
+      </ul>
+      <!-- input de busca e icone de pesquisa -->
+    </nav>
+    <main>
+      <!-- FOTOS DE AMOSTRA -- CAMISETA/CALÇA/BERMUDA/CALÇADO -->
+    </main>
+    <footer>
+      <p>
+        Rua do Estilo Despojado, 123 - Bairro da Moda Alternativa, Cidade Casual
+      </p>
+      <p>Todos os direitos reservados &reg</p>
+    </footer>
+  </body>
 </html>
