--- a/Pages/Third-page.html
+++ b/Pages/Third-page.html
@@ -1,59 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../CSS/style.css" />
     <title>CJ E-Commerce</title>
-</head>
-<body>
-    <header>  
-        <img class="logo" src="/images/CJ CLOTHING.jpg" alt="logo">      
-        <h1 class="e-name">C.J Clothing</h1>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="e-name">
+          <img class="logo" src="/images/CJ CLOTHING.jpg" alt="logo" />
+          <h1 class="site-name">C.J Clothing</h1>
+          <div class="login">
+            <ul class="list-login">
+              <img
+                class="login-icon"
+                src="../images/Assets/login_icon.png"
+                alt="icone de login"
+              />
+              <a class="img-header" href=""
+                ><li class="login-item">LOGIN</li></a
+              >
+              <img
+                class="register-icon"
+                src="../images/Assets/register-login.png"
+                alt="icone de registro"
+              />
+              <a class="img-header" href=""
+                ><li class="register-item">REGISTRE-SE</li></a
+              >
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
     <section>
-        <div class="img1">
-            <img class="pic1" src="../images/Third-page/1.webp" alt="homem com camiseta preta">
-            <input type="radio" id="img1" class="rad1" name="check1" checked="checked">
-            <label for="img1" class="lb1 label"></label>
-            <input type="radio" id="img2" class="rad2" name="check1">
-            <label for="img2" class="lb2 label"></label>
-            <img class="pic3" src="../images/Third-page/3.webp" alt="homem com camiseta preta">
-            <div class="container">
-                <main class="roupa">
-                    <h2 class="titulo">Camiseta Básica Preta</h2>
-                    <h3 class="preco">R$15,00</h3>
-                    <h3 class="desc">30% OFF</h3>
-                    <p class="review">Camiseta básica masculina, de modelo comfort, confeccionada em algodão peruano, com mangas curtas e gola redonda.</p>
-                </main>    
-                <main class="tam">
-                    <h3 class="size">Tamanho</h3>
-                    <ul class="l1">
-                        <a class="t1" href="#"><li>P</li></a>
-                        <a class="t1" href="#"><li>M</li></a>
-                        <a class="t1" href="#"><li>G</li></a>
-                        <a class="t1" href="#"><li>XG</li></a>
-                        <a class="t1" href="#"><li>XXG</li></a>
-                    </ul>
-                </main>
-                <main class="color">
-                    <h3 class="cor">Cor</h3>
-                    <ul class="lista2">
-                        <li class="l2 black"></li>
-                        <li class="l2 red"></li>
-                        <li class="l2 blue"></li>
-                        <li class="l2 lightpink"></li>
-                    </ul>
-                </main>    
-                <main class="qtd">
-                    <h3 class="quanti">Quantidade</h3>
-                    <input type="text" value="1">
-                </main>
-                <button>
-                    Compre Agora
-                </button>
-            </div>
-        </div>     
+      <div class="img1">
+        <img
+          class="pic1"
+          src="../images/Third-page/1.webp"
+          alt="homem com camiseta preta"
+        />
+        <input
+          type="radio"
+          id="img1"
+          class="rad1"
+          name="check1"
+          checked="checked"
+        />
+        <label for="img1" class="lb1 label"></label>
+        <input type="radio" id="img2" class="rad2" name="check1" />
+        <label for="img2" class="lb2 label"></label>
+        <img
+          class="pic3"
+          src="../images/Third-page/3.webp"
+          alt="homem com camiseta preta"
+        />
+        <div class="container-text">
+          <main class="roupa">
+            <h2 class="titulo">Camiseta Básica Preta</h2>
+            <h3 class="preco">R$15,00</h3>
+            <h3 class="desc">30% OFF</h3>
+            <p class="review">
+              Camiseta básica masculina, de modelo comfort, confeccionada em
+              algodão peruano, com mangas curtas e gola redonda.
+            </p>
+          </main>
+          <main class="tam">
+            <h3 class="size">Tamanho</h3>
+            <ul class="l1">
+              <a class="t1" href="#"><li>P</li></a>
+              <a class="t1" href="#"><li>M</li></a>
+              <a class="t1" href="#"><li>G</li></a>
+              <a class="t1" href="#"><li>XG</li></a>
+              <a class="t1" href="#"><li>XXG</li></a>
+            </ul>
+          </main>
+          <main class="color">
+            <h3 class="cor">Cor</h3>
+            <ul class="lista2">
+              <li class="l2 black"></li>
+              <li class="l2 red"></li>
+              <li class="l2 blue"></li>
+              <li class="l2 lightpink"></li>
+            </ul>
+          </main>
+          <main class="qtd">
+            <h3 class="quanti">Quantidade</h3>
+            <input type="text" value="1" />
+          </main>
+          <button>Compre Agora</button>
+        </div>
+      </div>
     </section>
-</body>
+    <footer>
+      <p class="footer-paragraph">
+        Rua do Estilo Despojado, 123 - Bairro da Moda Alternativa, Cidade Casual
+      </p>
+      <p class="footer-paragraph2">Todos os direitos reservados &reg</p>
+    </footer>
+  </body>
 </html>
