Ajustes no body da third-page e exclusão do style.css antigo

--- a/Pages/Third-page.html
+++ b/Pages/Third-page.html
@@ -3,10 +3,291 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
     <title>CJ E-Commerce</title>
   </head>
   <body>
+    <style>
+      /* BODY */
+      body {
+        background-color: #d8e0b7;
+      }
+      /* BODY */
+
+      /* SECTION */
+      section {
+        display: inline-flex;
+        flex-direction: column;
+        background-color: #d8e0b7;
+        height: 840px; /* altura */
+        width: 1150px; /* largura */
+        margin: 0 0 0 400px;
+      }
+      /* SECTION */
+
+      /* MAIN */
+      main {
+        background-color: white;
+        display: inline-flex;
+        flex-direction: column;
+      }
+
+      .img1 {
+        display: inline-flex;
+        flex-direction: row;
+        background-color: #d8e0b7;
+      }
+      .pic1 {
+        height: 600px;
+        transition: opacity 1s ease-in-out;
+        position: relative;
+        top: 110px;
+      }
+
+      .pic2 {
+        display: none;
+        position: absolute;
+        height: 600px;
+      }
+
+      .pic3 {
+        display: none;
+        position: absolute;
+        height: 600px;
+        top: 192px;
+      }
+
+      .container-text {
+        position: relative;
+        top: 110px;
+        right: 35px;
+        background-color: white;
+      }
+
+      .roupa {
+        display: inline-flex;
+        flex-direction: column;
+      }
+
+      .titulo {
+        font-size: 40px;
+        margin: 40px 0 5px 40px;
+      }
+
+      .preco {
+        font-size: 30px;
+        margin: 0 0 5px 40px;
+        color: rgb(73, 73, 73);
+      }
+
+      .desc {
+        font-size: 20px;
+        margin: 0 0 15px 40px;
+        color: rgb(79, 192, 89);
+      }
+
+      .review {
+        font-size: 18px;
+        margin: 50px 0 0 40px;
+        color: gray;
+        width: fit-content;
+      }
+
+      .tam {
+        display: inline-flex;
+        flex-direction: row;
+        list-style-type: none;
+        color: gray;
+      }
+
+      .size,
+      .color {
+        font-size: 20px;
+        margin: 50px 0 0 40px;
+      }
+
+      .l1 {
+        list-style-type: none;
+        display: inline-flex;
+        flex-direction: row;
+        height: fit-content;
+        margin: 55px 0 0 40px;
+        gap: 15px;
+      }
+
+      a {
+        color: gray;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: blue;
+      }
+
+      .content3 {
+        display: inline-flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: baseline;
+      }
+
+      .cor {
+        display: inline flex;
+      }
+
+      .color {
+        flex-direction: row;
+        margin: 30px 0 0 40px;
+        color: gray;
+      }
+
+      .lista2 {
+        display: inline;
+        margin-left: 90px;
+      }
+
+      .l2 {
+        display: inline-block;
+        list-style-type: none;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        cursor: pointer;
+        margin: 5px;
+      }
+
+      .l2.black {
+        background-color: black;
+      }
+
+      .l2.red {
+        background-color: red;
+      }
+
+      .l2.blue {
+        background-color: blue;
+      }
+
+      .l2.lightpink {
+        background-color: lightpink;
+      }
+
+      .qtd {
+        display: block;
+      }
+
+      .quanti {
+        display: inline-block;
+        margin: 0 0 0 40px;
+        color: gray;
+      }
+
+      input {
+        text-align: center;
+        border-radius: 50px;
+        width: 40px;
+        background-color: rgb(232, 232, 233);
+        border: none;
+        margin-left: 15px;
+      }
+      /* MAIN */
+
+      /* BUTTON */
+      button {
+        border-radius: 50px;
+        padding: 5px 10px;
+        background-color: rgb(172, 121, 219);
+        color: white;
+        margin: 80px 0 0 150px;
+        height: 50px;
+        width: 300px;
+        font-size: 30px;
+        border: none;
+        cursor: pointer;
+      }
+
+      /* BUTTON */
+
+      /* CHECKBOX */
+
+      #img1,
+      #img2 {
+        height: fit-content;
+        display: block;
+      }
+
+      #img1:checked + .pic2 {
+        display: block;
+      }
+
+      #img1:checked ~ .pic1 {
+        display: none;
+      }
+
+      #img2:checked + .pic3 {
+        display: block;
+      }
+
+      #img2:checked ~ .pic3 {
+        display: block;
+      }
+
+      #img1,
+      #img2 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(-100%, -100%);
+        z-index: -1;
+      }
+
+      /* CHECKBOX */
+
+      /* LABEL */
+
+      .lb1 {
+        display: block;
+        width: 40px;
+        height: 15px;
+        border-radius: 100%;
+        border: 1px solid gray;
+        cursor: pointer;
+        background-color: gray;
+        z-index: 3;
+      }
+
+      .lb2 {
+        display: block;
+        width: 37px;
+        height: 15px;
+        border-radius: 100%;
+        border: 1px solid gray;
+        cursor: pointer;
+        background-color: gray;
+        z-index: 3;
+      }
+
+      .lb1 {
+        position: relative;
+        top: 600px;
+        right: 31px;
+      }
+
+      .lb2 {
+        position: relative;
+        top: 625px;
+        right: 46px;
+      }
+
+      .rad1:checked ~ .lb1 {
+        background-color: rgb(172, 121, 219);
+      }
+      .rad2:checked ~ .lb2 {
+        background-color: rgb(172, 121, 219);
+      }
+
+      /* LABEL */
+    </style>
     <header>
       <div class="container">
         <div class="e-name">
